--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,11 @@
 }
 
 body {
+  padding: 0;
+  margin: 0;
   color: rgb(var(--foreground-rgb));
   background-image: url('../public/images/bg-main.jpg');
   background-size: cover;
   min-height: 100vh;
+  overflow-x: hidden;
 }
