--- a/styles/lector.module.css
+++ b/styles/lector.module.css
@@ -4,12 +4,26 @@
     font-weight: bold;
 }
 
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .containerLector{
-    height: 70vh;
+    margin-top: 30px;
+    height: 65vh;
+    width: 30vw;
+    border: 1px solid #888;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: all .2s ease;
+    backdrop-filter: blur(10px);
+}
+.containerLector:hover{
+    border: 1px solid #eee;
 }
 
 .registrarAsistencia{
