--- a/styles/nuevo.module.css
+++ b/styles/nuevo.module.css
@@ -1,6 +1,6 @@
 .container{
     height: 100vh;
-    width: 90vw;
+    width: 100vw;
 
 
     display: flex;
@@ -12,7 +12,7 @@
 
 .title{
     font-size: 2em; 
-    margin: 30px 0;
+    margin: 30px;
     margin-left: 30px;
     font-weight: bold;
 }
@@ -27,6 +27,7 @@
     align-items: start;
     padding: 30px;
     gap: 25px;
+    backdrop-filter: blur(10px);
 }
 
 .inputs{
