--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -30,3 +30,14 @@
 .encabezado{
     font-size: 1em;
 }
+
+@media (max-width: 768px) {
+    .title{
+        font-size: 3em;
+        text-align: center;
+    }
+    .encabezado{
+        text-align: center;
+    }
+}
+  
