--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -37,3 +37,48 @@
 .link:hover{
     color: #999;
 }
+
+@media (max-width: 768px) {
+    .navbar {
+        position: sticky;
+        top: 0;
+
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .navbar > div{
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        padding: 30px;
+        flex-direction: column;
+        gap: 20px;
+    }
+    .links{
+        margin-left: 30px;
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .navbar > div{
+        width: 100%;
+        height: 20vh;
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        padding: 30px;
+        flex-direction: column;
+        gap: 20px;
+    }
+  }
