--- a/styles/nuevo.module.css
+++ b/styles/nuevo.module.css
@@ -27,6 +27,7 @@
     align-items: start;
     padding: 30px;
     gap: 25px;
+    background-color: #aaa3;
     backdrop-filter: blur(10px);
 }
 
@@ -38,9 +39,11 @@
 .inputs > input{
     width: 35vw;
     height: 30px;
-    border-radius: 10px;
-    color: black;
+    outline: none;
+    color: white;
     padding-left: 10px;
+    background-color: transparent;
+    border-bottom: 1px solid white;
 }
 
 .select{
@@ -51,9 +54,14 @@
 .select > select{
     width: 35vw;
     height: 30px;
-    border-radius: 10px;
-    color: black;
+    outline: none;
+    color: white;
     padding-left: 10px;
+    background-color: transparent;
+    border-bottom: 1px solid white;
+}
+.select > select > option{
+    color: black;
 }
 
 .registrarNuevo{
