--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -22,7 +22,7 @@
     min-width: 200px;
     width: 300px;
     height: 300px;
-    border: 1px solid #222;
+    border: 1px solid #444;
     backdrop-filter: blur(10px);    
     transition: all .2s;
 
@@ -48,7 +48,14 @@
 .buttons button{    
     transition: all .2s ease-in;
     outline: 1px solid transparent;
+    padding: 0 5px;
 }
-.buttons button:hover{    
-    outline: 1px solid #888;
+.buttons .buttonBlue:hover{    
+    outline: 1px solid #05f;
+}
+.buttons .buttonGreen:hover{    
+    outline: 1px solid #0f5;
+}
+.buttons .buttonRed:hover{    
+    outline: 1px solid #a00;
 }
