--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,5 +1,4 @@
 .navbar{
-    width: 100%;
     height: 12vh;
     display: flex;
     justify-content: space-between;
@@ -12,10 +11,11 @@
     border-bottom: 1px solid #fff;
 }
 .navbar > div{
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 30px;
+    padding: 0 20px;
 }
 .gymsoftware{
     width: 50vw;
