--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -35,8 +35,9 @@
 }
 
 .card:hover{
-    border: 1px solid #eee;
+    border: 1px solid #ccc;
     backdrop-filter: blur(20px);
+    box-shadow: 0px 1px 10px 5px #fff2;
 }
 
 .buttons{
