--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -61,6 +61,6 @@
     color: #0f5;
 }
 .buttons .buttonRed:hover{    
-    outline: 1px solid #a00;
-    color: #a00;
+    outline: 1px solid #d00;
+    color: #d00;
 }
