--- a/styles/nuevo.module.css
+++ b/styles/nuevo.module.css
@@ -6,7 +6,6 @@
     height: 100vh;
     width: 100vw;
 
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,19 +15,17 @@
 
 .title{
     font-size: 2em; 
-    margin: 30px;
-    margin-left: 30px;
     font-weight: bold;
 }
 
 .formulario{
     border: 1px solid #888;
-    width: 40vw;
-    height: 80vh;
+    width: 35vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     padding: 30px;
     gap: 25px;
     background-color: #aaa3;
@@ -41,7 +38,7 @@
 }
 
 .inputs > input{
-    width: 35vw;
+    width: 30vw;
     height: 30px;
     outline: none;
     color: white;
@@ -56,8 +53,8 @@
 }
 
 .select > select{
-    width: 35vw;
-    height: 30px;
+    width: 30vw;
+    height: 20px;
     outline: none;
     color: white;
     background-color: transparent;
