--- a/styles/nuevo.module.css
+++ b/styles/nuevo.module.css
@@ -2,15 +2,17 @@
     display: flex;
     justify-content: center;
 }
-.container{
-    height: 100vh;
+.container1, .container2{
+    height: 80vh;
     width: 100vw;
-
+    background-color: #aaa2;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    border: 1px solid #888;
+    backdrop-filter: blur(15px);
+    gap: 50px;
 }
 
 .title{
@@ -19,8 +21,7 @@
 }
 
 .formulario{
-    border: 1px solid #888;
-    width: 35vw;
+    width: auto;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -28,8 +29,6 @@
     align-items: center;
     padding: 30px;
     gap: 25px;
-    background-color: #aaa3;
-    backdrop-filter: blur(10px);
 }
 
 .inputs{
@@ -64,14 +63,22 @@
     color: black;
 }
 
-.registrarNuevo{
+.registrarNuevo, .volver{
     padding: 5px;
     margin-top: 50px;
     transition: all .2s ease;
     outline: 1px solid transparent;
 }
-.registrarNuevo:hover{
+.registrarNuevo:hover,
+ .volver:hover{
     outline: 1px solid #ddd;
+}
+
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
 }
 
 @media (max-width: 768px) {
