--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -24,8 +24,9 @@
     gap: 30px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    text-align: center;
 }
 
 .link{
