--- a/app/globals.css
+++ b/app/globals.css
@@ -18,13 +18,15 @@
 
 *{
   user-select: none;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
 
 body {
   padding: 0;
   margin: 0;
   color: rgb(var(--foreground-rgb));
-  background-image: url('../public/images/bg-main.jpg');
+  background-image: url('../public/images/bg-main.webp');
   background-size: cover;
   min-height: 100vh;
   overflow-x: hidden;
