--- a/styles/actualizar.module.css
+++ b/styles/actualizar.module.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #888;
+    border: 1px solid white;
     backdrop-filter: blur(15px);
     gap: 50px;
 }
