--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -55,19 +55,20 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        text-align: center;
     }
     .navbar > div{
         width: 100%;
         height: auto;
         display: flex;
         justify-content: center;
-        align-items: start;
+        align-items: center;
         padding: 30px;
         flex-direction: column;
         gap: 20px;
     }
     .links{
-        margin-left: 30px;
+        text-align: center;
         gap: 10px;
         display: flex;
         flex-direction: column;
