--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body {
   padding: 0;
   margin: 0;
   color: rgb(var(--foreground-rgb));
-  background-image: url('../public/images/bg-main.webp');
+  background-image: url('../public/images/bg-main-3.jpg');
   background-size: cover;
   min-height: 100vh;
   overflow-y: hidden;
