--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -93,3 +93,35 @@
     outline: 1px solid #d00;
     color: #d00;
 }
+
+.inicioContainer{
+    position: absolute;
+    top: 0px;
+}
+
+.botonSubida{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    z-index: 999;
+    border-radius: 50%;
+    background-color: #7771;
+    bottom: 50px;
+    right: 60px;
+    transition: all .2s ease-in;
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-weight: bold;
+    font-size: 2.5ex;
+    color: #9995;
+
+}
+.botonSubida:hover{
+    background-color: #aaa6;
+    color: #aaa;
+}
+
