--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -12,6 +12,7 @@
     height: 80vh;
     border: 1px solid #888;
     transition: all .2s ease-out;
+    background-color: #8882;
 
     display: flex;
     flex-direction: column;
