--- a/styles/modificar-planes.module.css
+++ b/styles/modificar-planes.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
-    background-color: #1119;
+    background-color: #5559;
     border: 1px solid white;
     backdrop-filter: blur(10px);
 }
@@ -27,7 +27,7 @@
     align-items: center;
     border: 1px solid #555;
     width: 100%;
-    background-color: #3334;
+    background-color: #222d;
     padding: 10px;
 }
 .categoria > p{    
