--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -1,6 +1,6 @@
 .container{
     height: 80vh;
-    background-color: #0009;
+    background-color: #5559;
     border: 1px solid #333;
     transition: all .3s ease-in;
     backdrop-filter: blur(5px);
@@ -33,10 +33,11 @@
     min-width: 200px;
     width: 300px;
     height: 300px;
-    border: 1px solid #444;
+    border: 1px solid #000;
     backdrop-filter: blur(10px);    
     transition: all .2s;
 
+    background-color: #bbb4;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,9 +63,9 @@
 }
 
 .card:hover{
-    border: 1px solid #ccc;
+    border: 1px solid #000;
     backdrop-filter: blur(20px);
-    box-shadow: 0px 1px 10px 5px #fff2;
+    box-shadow: 0px 1px 5px 5px #0009;
 }
 
 @keyframes animation-borderRed {
@@ -93,16 +94,16 @@
     padding: 0 5px;
 }
 .buttons .buttonBlue:hover{    
-    outline: 1px solid #05f;
-    color: #05f;
+    outline: 1px solid #009;
+    color: #009;
 }
 .buttons .buttonGreen:hover{    
-    outline: 1px solid #0f5;
-    color: #0f5;
+    outline: 1px solid #0f0;
+    color: #0f0;
 }
 .buttons .buttonRed:hover{    
-    outline: 1px solid #d00;
-    color: #d00;
+    outline: 1px solid #600;
+    color: #600;
 }
 
 .inicioContainer{
