--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -140,6 +140,13 @@
     color: #aaa;
 }
 
+@media (max-width:992px) {
+    .botonSubida{
+        bottom: 10px;
+        right: 10px;
+    }
+}
+
 .filtrosContainer{
     width: 92vw;
     height: 5vh;
@@ -162,8 +169,8 @@
     color: white;
 }
 
-.filtrosContainer > select {
-    background-color: black;
+.filtrosContainer > div > select > option {
+    color: black;
 }
 
 .filtrosContainer > input::placeholder{
@@ -176,4 +183,22 @@
 }
 .nuevoUsuario:hover{
     color: #999;
+}
+
+
+
+/* Estilo para la barra de desplazamiento */
+.usuarios::-webkit-scrollbar {
+  width: 8px; /* Ancho de la barra */
+}
+
+/* Estilo para el pulgar de la barra de desplazamiento */
+.usuarios::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color del pulgar */
+  border-radius: 10px; /* Bordes redondeados */
+}
+
+/* Estilo para la pista de la barra de desplazamiento */
+.usuarios::-webkit-scrollbar-track {
+  background-color: transparent; /* Color de la pista */
 }
