--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -22,6 +22,9 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    backdrop-filter: brightness(.3);
+    height: 80vh;
+    border-radius: 15px;
 }
 
 .error{
