--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -53,7 +53,7 @@
 
 @media (max-width: 768px) {
     .navbar {
-        position: absolute;
+        position: relative;
         top: 0;
 
         width: 100%;
