--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -39,11 +39,11 @@
 
     background-color: #bbb4;
     display: flex;
-    align-items: center;
+    align-items: start;
+    padding-left: 20px;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
-    text-align: center;
+    gap: 10px;
 }
 .cardRed{
     min-width: 200px;
@@ -106,40 +106,6 @@
     color: #600;
 }
 
-.inicioContainer{
-    position: absolute;
-    top: 0px;
-    width: 5px;
-    height: 5px;
-    background-color: #600;
-}
-
-.botonSubida{
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    z-index: 999;
-    border-radius: 50%;
-    background-color: #7771;
-    bottom: 50px;
-    right: 60px;
-    transition: all .2s ease-in;
-    cursor: pointer;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    font-weight: bold;
-    font-size: 2.5ex;
-    color: #ddd;
-
-}
-.botonSubida:hover{
-    background-color: #aaa6;
-    color: #aaa;
-}
-
 .opciones{
     display: flex;
     justify-content: space-around;
@@ -158,8 +124,8 @@
     display: flex;
     gap: 30px;
 }
-.filtrosContainer > div > input,
-.filtrosContainer > div > select{
+.filtrosContainer > input,
+.filtrosContainer > select{
     background-color: transparent;
     border-bottom: 1px solid white;
     outline: transparent;
