--- a/styles/lector.module.css
+++ b/styles/lector.module.css
@@ -14,7 +14,8 @@
     margin-top: 30px;
     height: 65vh;
     width: 30vw;
-    border: 1px solid #888;
+    border: 1px solid #f70;
+    background-color: #f704;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +24,7 @@
     backdrop-filter: blur(10px);
 }
 .containerLector:hover{
-    border: 1px solid #eee;
+    border: 1px solid #f40;
 }
 
 .registrarAsistencia{
@@ -31,10 +32,10 @@
     margin-top: 100px;
     transition: all .2s ease;
     outline: 1px solid transparent;
-    background-color: #555c;
+    background-color: #f70c;
 }
 .registrarAsistencia:hover{
-    outline: 1px solid #333;
+    outline: 1px solid #f10;
 }
 
 @media (max-width: 768px) {
