--- a/styles/modificar-planes.module.css
+++ b/styles/modificar-planes.module.css
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
-    background-color: #5559;
-    border: 1px solid white;
+    background-color: #f704;
+    border: 1px solid #f40;
     backdrop-filter: blur(10px);
 }
 
@@ -60,9 +60,8 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border: 1px solid #555;
     width: 100%;
-    background-color: #222d;
+    background-color: #f407;
     padding: 10px;
 }
 .categoria > p{    
@@ -139,13 +138,14 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #111;
+    background-color: #fff3;
 }
 .listaPlanes p{
-    border: 1px solid #333;
+    border-bottom: 1px solid white;
     width: 100%;
     text-align: center;
     padding: 10px;
+    color: #fff;
 }
 
 .acciones{
@@ -160,10 +160,11 @@
 .eliminar{
     cursor: pointer;
     transition: all .2s ease;
+    outline: #f10;
 }
 
 .eliminar:hover{
-    background-color: darkred;
+    background-color: orangered;
 }
 
 .editar{
