--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -4,9 +4,9 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #f70;
     transition: all .3s ease;
-    background-color: #7776;
+    background-color: #f706;
 }
 
 .x{
@@ -19,23 +19,24 @@
 }
 
 .navbar:hover{
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #f50;
 }
 .navbar > div{
     width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 20px 0 0px;
 }
-.gymsoftware{
-    width: auto;
-    font-size: 2.5ex;
+.logo{
+    padding-left: 20px;
     transition: all .3s ease;
 }
-.gymsoftware:hover{
-    color: #ccc;
+
+.logo:hover{
+    filter: brightness(.7);
 }
+
 .links{
     gap: 30px;
     display: flex;
@@ -48,6 +49,10 @@
 .link{
     color: #fff;
     transition: all .2s ease;
+}
+
+.link:hover{
+    color: #aaa;
 }
 
 
