--- a/styles/usuarios.module.css
+++ b/styles/usuarios.module.css
@@ -1,7 +1,7 @@
 .container{
     height: 80vh;
-    background-color: #5559;
-    border: 1px solid #333;
+    background-color: #f704;
+    border: 1px solid #f70;
     transition: all .3s ease-in;
     backdrop-filter: blur(5px);
     display: flex;
@@ -25,7 +25,7 @@
     overflow-x: hidden;
 }
 .container:hover{
-    border: 1px solid #999;
+    border: 1px solid #d40;
     backdrop-filter: blur(10px);
 }
 
@@ -33,40 +33,67 @@
     min-width: 200px;
     width: 300px;
     height: 300px;
-    border: 1px solid #000;
+    border: 1px solid #f20;
     backdrop-filter: blur(10px);    
     transition: all .2s;
 
-    background-color: #bbb4;
+    background-color: #f707;
     display: flex;
-    align-items: start;
-    padding-left: 20px;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
+    text-align: center;
 }
 .cardRed{
     min-width: 200px;
     width: 300px;
     height: 300px;
-    border: 1px solid #500000;
-    background-color: #4001;
+    border: 1px solid #000000;
+    background-color: #1001;
     backdrop-filter: blur(10px);    
     transition: all .2s;
 
     display: flex;
     align-items: center;
+    padding-left: 20px;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 5px;
     text-align: center;
 }
 
 .card:hover{
-    border: 1px solid #000;
+    border: 1px solid #f00;
     backdrop-filter: blur(20px);
-    box-shadow: 0px 1px 5px 5px #2229;
+    box-shadow: 0px 1px 5px 5px #f40;
 }
+
+.hoveredCard{
+    min-width: 200px;
+    width: 300px;
+    height: 300px;
+    border: 1px solid transparent;
+    transition: all .2s;
+    background-color: #0007;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 5px;
+    text-align: center;
+    color: #fff1;
+}
+
+.diasRestantes{
+    background-color: #d305;
+    font-size: 3em;
+    border-radius: 100px;
+    padding: 10px;  
+    margin: 15px 0;
+}
+
+
 
 @keyframes animation-borderRed {
     0%, 100%{
@@ -82,28 +109,27 @@
 }
 
 .buttons{
+    width: 50%;
+    font-size: 1.1em;
+    position: absolute;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    align-items: center;;
     outline: 1px solid transparent;
     padding: 20px;
+    transition: all .2s ease;
+    color: white;
+    font-weight: bold;
 }
 .buttons button{    
     transition: all .2s ease-in;
     outline: 1px solid transparent;
     padding: 0 5px;
+    margin: 10px 0;
 }
-.buttons .buttonBlue:hover{    
-    outline: 1px solid #009;
-    color: #009;
-}
-.buttons .buttonGreen:hover{    
-    outline: 1px solid #0f0;
-    color: #0f0;
-}
-.buttons .buttonRed:hover{    
-    outline: 1px solid #600;
-    color: #600;
+.buttons .button:hover{    
+    color: #aaa;
 }
 
 .opciones{
@@ -140,7 +166,7 @@
 }
 
 .filtrosContainer > input::placeholder{
-    color: #777;
+    color: white;
 }
 
 .filtrosContainer > select > option{
@@ -156,6 +182,10 @@
     width: 100%;
 }
 
-.nuevoUsuario:hover{
+.link{
+    transition: all .4s ease;
+}
+
+.nuevoUsuario > .link:hover{
     color: #999;
 }
