--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -68,7 +68,7 @@
         align-items: center;
         flex-direction: column;
         text-align: center;
-        background-color: #777f;
+        background-color: #f706;
     }
     .navbar > div{
         width: 100%;
@@ -93,17 +93,17 @@
         display: block;
         cursor: pointer;
     }
-  }
-  
-  @media (min-width: 769px) and (max-width: 1024px) {
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
     .navbar > div{
         width: 100%;
-        height: 20vh;
+        height: auto;
         display: flex;
         justify-content: center;
         align-items: start;
         padding: 30px;
-        flex-direction: column;
+        flex-direction: row;
         gap: 20px;
     }
-  }
+}
