--- a/styles/consulta.module.css
+++ b/styles/consulta.module.css
@@ -89,6 +89,7 @@
 
 .respuestaConsulta > .response {
     width: 100%;
+    text-align: center;
 }
 
 .respuestaConsulta > .response::-webkit-scrollbar {
