--- a/styles/inventario.module.css
+++ b/styles/inventario.module.css
@@ -1,7 +1,7 @@
 .container{
     height: 65vh;
-    background-color: #5559;
-    border: 1px solid #333;
+    background-color: #f706;
+    border: 1px solid #f40;
     transition: all .3s ease-in;
     backdrop-filter: blur(5px);
     justify-content: space-evenly;
@@ -11,17 +11,17 @@
     overflow-y: scroll;
 }
 .container:hover{
-    border: 1px solid #999;
+    border: 1px solid #f60;
     backdrop-filter: blur(10px);
 }
 
 .card{
     width: 90vw;
-    height: 10vh;
-    border: 1px solid #000;
+    height: auto;
+    border: 1px solid #333;
     backdrop-filter: blur(10px);    
     transition: all .2s;
-    background-color: #7779;
+    background-color: #fff4;
 
     display: flex;
     align-items: center;
@@ -48,8 +48,7 @@
 .titulos{
     display: flex;
     width: 90vw;
-    background-color: #2226;
-    border: 1px solid #444;
+    background-color: #f704;
     justify-content: space-between;
     padding: 0 20px;
 }
@@ -106,8 +105,8 @@
 }
 
 .container2{
-    background-color: #5559;
-    border: 1px solid #333;
+    background-color: #f706;
+    border: 1px solid #f40;
     transition: all .3s ease-in;
     backdrop-filter: blur(5px);
     justify-content: space-evenly;
@@ -121,7 +120,7 @@
 
 }
 .container2:hover{
-    border: 1px solid #999;
+    border: 1px solid #f50;
     backdrop-filter: blur(10px);
 }
 
