--- a/styles/nuevo-articulo.module.css
+++ b/styles/nuevo-articulo.module.css
@@ -5,12 +5,12 @@
 .container1, .container2{
     height: 80vh;
     width: 100vw;
-    background-color: #aaa2;
+    background-color: #f706;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #888;
+    border: 1px solid #f40;
     backdrop-filter: blur(15px);
     gap: 50px;
 }
@@ -77,7 +77,7 @@
     outline: 1px solid transparent;
 }
 .registrarNuevo:hover,
- .volver:hover{
+.volver:hover{
     outline: 1px solid #ddd;
 }
 
@@ -114,4 +114,3 @@
         height: 30px;
     }
 }
-  
