--- a/styles/actualizar.module.css
+++ b/styles/actualizar.module.css
@@ -5,12 +5,12 @@
 .container1, .container2{
     height: 80vh;
     width: 100vw;
-    background-color: #aaa2;
+    background-color: #f706;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid white;
+    border: 1px solid #f40;
     backdrop-filter: blur(15px);
     gap: 50px;
 }
@@ -70,7 +70,7 @@
     outline: 1px solid transparent;
 }
 .registrarNuevo:hover,
- .volver:hover{
+.volver:hover{
     outline: 1px solid #ddd;
 }
 
