--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,7 @@ body {
   margin: 0;
   color: rgb(var(--foreground-rgb));
   background-image: url('../public/images/bg-main-3.jpg');
+  background-color: #444;
   background-size: cover;
   min-height: 100vh;
   overflow-y: hidden;
