--- a/styles/actualizar.module.css
+++ b/styles/actualizar.module.css
@@ -5,13 +5,13 @@
 .container1, .container2{
     height: 80vh;
     width: 100vw;
-    background-color: #f706;
+    background-color: #0119;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #f40;
-    backdrop-filter: blur(15px);
+    border: 1px solid #044;
+    backdrop-filter: blur(20px);
     gap: 50px;
 }
 
@@ -106,4 +106,3 @@
         height: 30px;
     }
 }
-  
