--- a/styles/asistencia.module.css
+++ b/styles/asistencia.module.css
@@ -9,8 +9,8 @@
     backdrop-filter: blur(20px);
     width: 30vw;
     height: 50vh;
-    border: 1px solid #f40;
-    background-color: #f705;
+    border: 1px solid #044;
+    background-color: #0119;
     transition: all .2s ease;
     padding: 10px;
 
@@ -30,7 +30,7 @@
 }
 
 .formulario:hover{
-    border: 1px solid #f30;
+    border: 1px solid #055;
 }
 
 .title{
@@ -58,12 +58,13 @@
     padding: 5px;
     margin-top: 50px;
     transition: all .2s ease;
-    outline: 1px solid transparent;
-    background-color: #f50c;
+    outline: 1px solid #011;
+    background-color: transparent;
     color: #fff;
 }
 .registrarAsistencia:hover{
-    outline: 1px solid #f30;
+    background-color: #fff;
+    color: #011;
 }
 
 
