--- a/styles/modificar-planes.module.css
+++ b/styles/modificar-planes.module.css
@@ -3,9 +3,9 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
-    background-color: #f704;
-    border: 1px solid #f40;
-    backdrop-filter: blur(10px);
+    background-color: #0119;
+    border: 1px solid #044;
+    backdrop-filter: blur(20px);
 }
 
 @media (max-width:992px) {
@@ -61,7 +61,7 @@
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    background-color: #f407;
+    background-color: #033;
     padding: 10px;
 }
 .categoria > p{    
