--- a/styles/nuevo-articulo.module.css
+++ b/styles/nuevo-articulo.module.css
@@ -5,12 +5,12 @@
 .container1, .container2{
     height: 80vh;
     width: 100vw;
-    background-color: #f706;
+    background-color: #0119;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #f40;
+    border: 1px solid #044;
     backdrop-filter: blur(15px);
     gap: 50px;
 }
