--- a/styles/nuevo.module.css
+++ b/styles/nuevo.module.css
@@ -5,13 +5,13 @@
 .container1, .container2{
     height: 80vh;
     width: 100vw;
-    background-color: #f705;
+    background-color: #0119;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid #f70;
-    backdrop-filter: blur(15px);
+    border: 1px solid #044;
+    backdrop-filter: blur(20px);
     gap: 50px;
 }
 
@@ -70,7 +70,7 @@
     outline: 1px solid transparent;
 }
 .registrarNuevo:hover,
- .volver:hover{
+.volver:hover{
     outline: 1px solid #ddd;
 }
 
@@ -107,4 +107,3 @@
         height: 30px;
     }
 }
-  
